add device auth to as
