# servers/emsp-as/src/html/api/token.php
@@ -2,7 +2,7 @@
   // Handles Token Request.
 
   // Load configuration.
-  require('../config.php');
+  require('../../config.php');
 
   // Send Token Request.
   $tokenRequest = curl_init($AUTHLETE_CONFIG['TOKEN_ENDPOINT']);
@@ -12,18 +12,24 @@
     'clientSecret' => $AUTHLETE_CONFIG['CLIENT_SECRET'],
   )));
   curl_setopt($tokenRequest, CURLOPT_HTTPHEADER, array(
-    'content-type: application/json',
-    'authorization: Basic ' . base64_encode($AUTHLETE_CONFIG['API_KEY'] . ':' . $AUTHLETE_CONFIG['API_SECRET']),
+    'Content-Type: application/json',
+    'Authorization: Basic ' . base64_encode($AUTHLETE_CONFIG['API_KEY'] . ':' . $AUTHLETE_CONFIG['API_SECRET']),
   ));
   curl_setopt($tokenRequest, CURLOPT_RETURNTRANSFER, true);
   $response = json_decode(curl_exec($tokenRequest));
 
   // Check for success.
-  if ($response->action !== 'OK') {
-    http_response_code(500);
+  if ($response->action == 'OK') {
+    http_response_code(200);
+    echo $response->responseContent;
+    exit;
+  } else if ($response->action == 'BAD_REQUEST') {
+    http_response_code(400);
     echo $response->resultMessage;
     exit;
+  } else {
+    http_response_code(500);
+    echo 'Unknown server error';
+    exit;
   }
-
-  echo $response->responseContent;
 ?>
